# stasssh

./: .gitignore  README.md  config.example.toml  pyproject.toml
.claude/hooks/: session-start.sh
docs/: ARCHITECTURE.md  STARTUP_CHECKLIST.md
src/peaks/: cache.py  classifier.py  cli.py  config.py  embedding.py  labeler.py  labels.py  pipeline.py  playlist.py  sampling.py  scoring.py  stash_client.py
tests/: test_classifier.py  test_labels.py  test_pipeline.py  test_playlist.py  test_review_fixes.py  test_sampling.py  test_tier2_pipeline.py
webapp/: README.md  index.html  megaboard.css  megaboard.js
