[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peaks"
version = "0.1.0"
description = "Find and play back the moments you actually care about in a Stash library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "numpy>=1.24",    # used across scoring/cache/pipeline, not just ML
]

# Heavy ML deps are kept optional so the plumbing + scoring logic install light.
# Install with:  pip install -e ".[ml]"
[project.optional-dependencies]
ml = [
    "torch",          # DINOv2 / CLIP inference
    "open_clip_torch",  # the CLIP channel
    "torchvision",    # DINOv2 image transforms
    "pillow",
    "scikit-learn",   # the Tier-2 taste classifier
    "tqdm",
]
label = [
    "gradio",         # the rapid frame-rating tool (Tier 2)
]
dev = [
    "pytest>=7",      # the offline test suite (no torch/ffmpeg/Stash needed)
]

[project.scripts]
peaks = "peaks.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
